--- a/_sass/_projects-page.scss
+++ b/_sass/_projects-page.scss
@@ -30,14 +30,12 @@
             }
         }
         ul {
-            width: 100%;
             overflow: hidden;
             li {
                 display: block;
                 float: left;
                 width: 50%;
                 font-size: 16px;
-                list-style-type: circle;
                 padding-bottom: 20px;
                 color: #787878;
                 // background:red;
